--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     // 5) Demo generátor
     function demoData(cinemaId, dateISO) {
       const seed = Math.abs(hashCode(cinemaId + dateISO));
-      const titles = ["Věčnost","Tiché město","Zimní krajina","Dům na kopci","Stříbrné světlo","Hranice noci","Černý déšť","Cesta domů","Zahrada","Hlasy","Podzimní řeka","Písek a sklo"];
+      const titles = ["Demo1","Demo2","Demo3","Demo4","Demo5"];
       const halls = ["Sál 1","Sál 2","Velký sál","Malý sál","Studio"];
       const items = [];
       const filmCount = 2 + (seed % 4);
@@ -298,3 +298,4 @@
   </script>
 </body>
 </html>
+
