--- a/index.html
+++ b/index.html
@@ -172,16 +172,17 @@
 
     // 7) Jedno kino a den
     async function loadProgramForCinema(cinemaId, date) {
-      if (cinemaId === "atlas") {
-        const r = await fetch(ENDPOINTS[cinemaId](date));
-        if (!r.ok) {
-          const t = await r.text();
-          throw new Error(`Atlas API: ${r.status} ${t.slice(0,120)}`);
-        }
-        return r.json();
-      }
-      return demoData(cinemaId, date);
+  if (cinemaId === "atlas" || cinemaId === "svetozor") {
+    const r = await fetch(ENDPOINTS[cinemaId](date));
+    if (!r.ok) {
+      const t = await r.text();
+      throw new Error(`${cinemaId} API: ${r.status} ${t.slice(0,120)}`);
     }
+    return r.json();
+  }
+  return demoData(cinemaId, date);
+}
+
 
     // 8) Načtení a výpis podle kin
     async function loadAll() {
@@ -298,4 +299,5 @@
   </script>
 </body>
 </html>
+
 
