--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
     // 7) Jedno kino a den
     async function loadProgramForCinema(cinemaId, date) {
-  if (cinemaId === "atlas" || cinemaId === "svetozor") {
+  if (cinemaId === "atlas" || cinemaId === "svetozor"|| cinemaId === "lucerna") {
     const r = await fetch(ENDPOINTS[cinemaId](date));
     if (!r.ok) {
       const t = await r.text();
@@ -299,5 +299,6 @@
   </script>
 </body>
 </html>
+
 
 
