--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
   </style>
 </head>
 <body>
+
+  <!-- Logo / obrázek nahoře -->
+  <div style="text-align:center; margin-bottom: 1rem;">
+    <img src="logo.png" alt="Logo projektu" style="max-width: 200px; height: auto;">
+  </div>
+
+  <h1>Program pražských art kin</h1>
+
   <h1>Program pražských art kin</h1>
 
   <div class="card">
@@ -299,6 +307,7 @@
   </script>
 </body>
 </html>
+
 
 
 
