--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
   <!-- Logo / obrázek nahoře -->
   <div style="text-align:center; margin-bottom: 1rem;">
-    <img src="logo.png" alt="Logo projektu" style="max-width: 200px; height: auto;">
+   <img src="logo.png" alt="Logo projektu" style="max-width: 100%; height: auto;">
+
   </div>
 
   
@@ -307,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
