--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     // 7) Jedno kino a den
     async function loadProgramForCinema(cinemaId, date) {
-  if (cinemaId === "atlas" || cinemaId === "svetozor"|| cinemaId === "lucerna"|| cinemaId === "aero"|| cinemaId === "edison"  ) {
+  if (cinemaId === "atlas" || cinemaId === "svetozor"|| cinemaId === "lucerna"|| cinemaId === "aero"|| cinemaId === "edison" || cinemaId === "ponrepo" || cinemaId === "pilotu" ) {
     const r = await fetch(ENDPOINTS[cinemaId](date));
     if (!r.ok) {
       const t = await r.text();
@@ -308,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
